<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_article_scene"
    tools:context=".ui.article.ArticleFragment"
    android:background="@color/primaryLightColor">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dp_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dp_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.899" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="455dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:text="@string/your_stats"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/articles_status"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <View
        android:id="@+id/materialCardView2"
        android:layout_width="match_parent"
        android:layout_height="577dp"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_button_primary_color"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/pieChart"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/circle_shape"
        android:indeterminate="false"
        android:max="100"
        android:progressDrawable="@drawable/bg_circular_progress_bar"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView2"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@id/materialCardView2"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.033" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageview5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="@id/pieChart"
        app:layout_constraintEnd_toEndOf="@id/pieChart"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@id/pieChart"
        app:layout_constraintTop_toTopOf="@id/pieChart"
        app:layout_constraintVertical_bias="0.492"
        app:srcCompat="@drawable/ic_money"
        app:tint="@color/primaryLightColor" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:text="@string/money_percentage"
        android:textColor="@color/primaryLightColor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/materialCardView2"
        app:layout_constraintTop_toTopOf="@+id/materialCardView2" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="252dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_center"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/materialCardView2"
        app:layout_constraintVertical_bias="0.203"
        app:srcCompat="@drawable/bg_items_img"
        app:tint="@color/secondaryDarkColor" />

    <TextView
        android:id="@+id/tv_expenses_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/primaryLightColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView"
        app:layout_constraintVertical_bias="0.65"
        tools:text="Expenses 56%" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="320dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_center"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/materialCardView2"
        app:layout_constraintVertical_bias="0.203"
        app:srcCompat="@drawable/bg_items_img"
        app:tint="@color/secondaryColor" />

    <TextView
        android:id="@+id/tv_income_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/primaryLightColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toEndOf="@+id/appCompatImageView2"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView2"
        app:layout_constraintVertical_bias="0.45"
        tools:text="Income 56%" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:text="@string/status_now"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/materialCardView2"
        app:layout_constraintVertical_bias="0.705" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_status"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/ic_expense_large" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:textColor="@color/primaryLightColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView2"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_status"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.062"
        tools:text="@string/you_did_a_good_job" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="194dp"
        android:layout_height="88dp"
        android:lines="5"
        android:textColor="@color/primaryLightColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView2"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_status"
        app:layout_constraintTop_toBottomOf="@+id/tv_status"
        app:layout_constraintVertical_bias="0.393"
        tools:text="@string/text_description_failed" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_article"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp_16"
        android:visibility="invisible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        tools:listitem="@layout/items_article" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/articles_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        tools:src="@drawable/ic_error" />

    <TextView
        android:id="@+id/tv_message_api"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/articles_status"
        app:layout_constraintStart_toStartOf="@+id/articles_status"
        app:layout_constraintTop_toBottomOf="@+id/articles_status"
        tools:text="Something Went Wrong" />

    <ProgressBar
        android:id="@+id/pgr_loading"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="@id/pieChart"
        app:layout_constraintEnd_toEndOf="@id/pieChart"
        app:layout_constraintStart_toStartOf="@id/pieChart"
        app:layout_constraintTop_toTopOf="@id/pieChart"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grp_api_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="articles_status, tv_message_api" />

</androidx.constraintlayout.widget.ConstraintLayout>